--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -464,12 +464,16 @@
             ctx.clearRect(0, 0, 800, 800); 
             ctx.drawImage(boardImg, 0, 0, 800, 800); 
 
-            // Set default positions if current turn is 0
-            let redPositions = data[turn].positions['red'];
-            let blackPositions = data[turn].positions['black'];
+            // Determine positions based on turn
+            let redPositions, blackPositions;
             if (turn === 0) {
                 redPositions = { '1': 2, '6': 5, '8': 3, '13': 5, 'bar': 0, 'off': 0 };
                 blackPositions = { '24': 2, '19': 5, '17': 3, '12': 5, 'bar': 0, 'off': 0 };
+            } else {
+                // Use positions from the previous turn (turn - 1)
+                const prevTurn = turn - 1;
+                redPositions = data[prevTurn].positions['red'];
+                blackPositions = data[prevTurn].positions['black'];
             }
 
             // Draw checkers with updated or default positions
